# turbine-llm

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  MEMORY.md  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
examples/: conversation.rs  json_output.rs  simple_usage.rs  text_generation.rs
src/: client.rs  error.rs  lib.rs  models.rs  types.rs
src/providers/: anthropic.rs  gemini.rs  groq.rs  mod.rs  openai.rs
