[package]
name = "turbine-llm"
version = "0.2.1"
edition = "2024"
authors = ["Renaiss AI <research@renaiss.ai>"]
description = "Unified Rust interface for multiple LLM providers with growing model support"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Renaiss-AI/turbine-llm"
homepage = "https://github.com/Renaiss-AI/turbine-llm"
documentation = "https://docs.rs/turbine-llm"
readme = "README.md"
keywords = ["llm", "openai", "anthropic", "gemini", "groq"]
categories = ["api-bindings", "asynchronous"]

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["full"] }
thiserror = "1.0"
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"
